plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.Contrack'
version = '0.0.1-SNAPSHOT'
description = 'Contrack, project from P1 discipline. '

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

    /* --- SPRING --- */
    implementation 'org.springframework.boot:spring-boot-starter-web'        // Controllers REST
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'   // JPA
    implementation 'org.springframework.boot:spring-boot-starter-validation' // @Valid

    /* --- BANCO DE DADOS --- */
    runtimeOnly 'com.h2database:h2'        // H2 no runtime
    testImplementation 'com.h2database:h2' // H2 para testes

    /* --- SWAGGER (SpringDoc) --- */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    /* --- LOMBOK --- */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    /* --- DEVTOOLS --- */
 //   developmentOnly 'org.springframework.boot:spring-boot-devtools'

    /* --- TESTES --- */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    /* --- MODELMAPPER --- */
    implementation 'org.modelmapper:modelmapper:3.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
